@@ -1,3 +1,8 @@
+FBINTF Change Log  version          (1.4-1 Build 14011) Sat, 05 Aug 2023 11:09:09 +0100
+
+1. FBSQLData: ensure that TResults.getSQLData and TResults.GetData use same error
+   checks for range checking.
+
 FBINTF Change Log  version          (1.4-0 Build 14011) Sat, 05 Aug 2023 11:09:09 +0100
 
 1. Support package fbudr added for support of User Defined Routines (UDRs), and package
